# ICT-TianYan_AndroidCDS

./: README.md
AndroidCDS_Client/: README.md  build.gradle  local.properties
AndroidCDS_Client/app/: CMakeLists.txt  build.gradle
AndroidCDS_Client/app/src/androidTest/java/ac/ict/humanmotion/abracadabra/: ExampleInstrumentedTest.kt
AndroidCDS_Client/app/src/main/: AndroidManifest.xml
AndroidCDS_Client/app/src/main/java/ac/ict/humanmotion/abracadabra/: BaseActivity.kt  ClipActivity.kt  FrontCameraActivity.kt  LoginActivity.java  Main2Activity.java  MainActivity.kt  WorkList.kt
AndroidCDS_Client/app/src/main/java/ac/ict/humanmotion/abracadabra/Adapter/: BaseAdapter.java  MyViewPager.kt  StudentAdapter.kt
AndroidCDS_Client/app/src/main/java/ac/ict/humanmotion/abracadabra/Bean/: Info.java  JsonResult.java  Operation.kt  OperationDetail.kt  Robot.java  SVMDataBean.kt  User.kt  UserModel.kt  WorkListDetail.kt  Worktable.kt
AndroidCDS_Client/app/src/main/java/ac/ict/humanmotion/abracadabra/Fragment/: BaseFragment.kt  CompareFragment.kt  RecognizeFragment.kt
AndroidCDS_Client/app/src/main/java/ac/ict/humanmotion/abracadabra/HTTPAround/: MyStringObserver.kt  MyTemplateObserver.kt
AndroidCDS_Client/app/src/main/java/ac/ict/humanmotion/abracadabra/Interface/: CloudAPI.kt  URLAPI.java
AndroidCDS_Client/app/src/main/java/ac/ict/humanmotion/abracadabra/Lpms/: ConnectionFragment.java  CurrentStateFragment.kt  ImuStatus.kt  LpmsBData.kt  LpmsBThread.kt  MyFragment.kt
AndroidCDS_Client/app/src/main/java/ac/ict/humanmotion/abracadabra/OCR/: OCRActivity.kt
AndroidCDS_Client/app/src/main/java/ac/ict/humanmotion/abracadabra/tools/: BootBroadcastReceiver.java  LoadingDialogUtils.java
AndroidCDS_Client/app/src/main/res/drawable/: btn_shape.xml
AndroidCDS_Client/app/src/main/res/layout/: activity_front_camera.xml  activity_main.xml  activity_ocr.xml  floatwindow.xml  fragment_compare.xml  fragment_recognize.xml  list_view_text_item.xml  lmps_connect_screen.xml  login.xml  main.xml  startoperate.xml  state_fragment.xml  work_input.xml
AndroidCDS_Client/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
AndroidCDS_Client/app/src/test/java/ac/ict/humanmotion/abracadabra/: ExampleUnitTest.kt
AndroidCDS_Client/gradle/wrapper/: gradle-wrapper.properties
AndroidCDS_Server/: Readme.MD  Transformer_Table.py  classifier.py  comparetwoimage.py  homography  homography.cpp  lpms_data_server.py  ocr.py  picture_x_y.txt  robot_server.py  test.py  train.csv  train_model.m
AndroidCDS_Server/HistoryBackup/: aa.py  lpms_data_server(复件).py
AndroidCDS_Server/HistoryBackup/1/: lpms_data_server.py
AndroidCDS_Server/HistoryBackup/2/: homography  homography.cpp
AndroidCDS_Server/HistoryBackup/tools/: 1  1.cpp  Mouse.cpp  README  homography  homography.cpp  train.csv  train11.csv  wenizi.cpp
AndroidCDS_Server/HistoryBackup/tools/resource/: Imag.py  Image.py
AndroidCDS_Server/Images/1/: result.txt
OtherTools/DataBases/: (Navicat)worktabledatabase.sql  (mysql)workdatabase.sql
OtherTools/HistoryBackup/LpmsB/app/: build.gradle
OtherTools/HistoryBackup/LpmsB/app/src/main/: AndroidManifest.xml
OtherTools/HistoryBackup/LpmsB/gradle/wrapper/: gradle-wrapper.properties
OtherTools/HistoryBackup/OCR_cloud_server/: Readme.MD  lpms.csv  lpms_data_server.py  ocr.py  train_model.m
OtherTools/HistoryBackup/tool/: CMakeLists.txt  build.gradle
OtherTools/HistoryBackup/two/20180812_LpmsBs/app/: build.gradle
OtherTools/HistoryBackup/two/20180812_LpmsBs/gradle/wrapper/: gradle-wrapper.properties
OtherTools/InstallTools/MySQL/: Python3安装MySQLDB.docx  Ubuntu 18.04安装MySQL（5.7.23）.docx  修改字符集.txt
OtherTools/InstallTools/OpenCV/: 【安装教程】Ubuntu16.04中用CMake-gui安装OpenCV3.2.0和OpenCV_contrib-3.2.0（图文）.docx
OtherTools/InstallTools/OpenFace/: OpenFace安装教程.docx
OtherTools/XM_IPC/: README.md  XM_IPC_Camera.py
OtherTools/XM_IPC/Document/: MyEyeSDK(iOS)接口使用说明.docx
OtherTools/XM_IPC/PyCExt/: CMakeLists.txt  Makefile  PyXMCamera.cpp  README.md  netsdk.h  xmcext.cbp
OtherTools/XM_IPC/sdk/demo/: .test.cpp.swp  CMakeLists.txt  main  readme.txt  test.cpp
OtherTools/XM_IPC/sdk/include/: netsdk.h
(+101 files in other folders)
